--- a/pages/confirmOrder/confirmOrder.wxml
+++ b/pages/confirmOrder/confirmOrder.wxml
@@ -179,7 +179,7 @@
 					<view class="three">
 						<view class="three_names">货物编号</view>
 						<view class="thre_wp">
-							<textarea class="texttare" data-index="{{ index }}" bindinput="goodsCoding" value="{{ item. goods_codes}}"></textarea>
+							<textarea hidden="{{textarea}}" class="texttare" data-index="{{ index }}" bindinput="goodsCoding" value="{{ item. goods_codes}}"></textarea>
 						</view>
 					</view>
 					<!-- 倒换车情况 -->
@@ -259,7 +259,7 @@
 						</view>
 						<view class="outer_packing xz">
 							<text>*</text>装卸工人员
-							<textarea bindinput="unload" value="{{ unloadValue }}"></textarea>
+							<textarea hidden="{{textarea}}" bindinput="unload" value="{{ unloadValue }}"></textarea>
 						</view>
 						<view class="outer_packing xz ntb">
 							<text>*</text>挑包费用
@@ -275,7 +275,7 @@
 					<view class="three_a">
 						<view class="three_tit">备注信息</view>
 						<view class="thre_wp_a">
-							<textarea class="texttare_a" maxlength="{{ max }}" placeholder-class="place_three" bindinput="inputs" bindinput="postscript" value="{{ postscriptValue }}"></textarea>
+							<textarea hidden="{{textarea}}" class="texttare_a" maxlength="{{ max }}" placeholder-class="place_three" bindinput="inputs" bindinput="postscript" value="{{ postscriptValue }}"></textarea>
 							<text class="currentWordNumber_a">{{ currentWordNumber|0 }}/{{ max }}</text>
 						</view>
 					</view>
@@ -300,7 +300,7 @@
 						</view>
 						<view class="outer_packing xz">
 							<text>*</text>费用说明
-							<textarea bindinput="cost" value="{{ costValue }}"></textarea>
+							<textarea hidden="{{textarea}}" bindinput="cost" value="{{ costValue }}"></textarea>
 						</view>
 					</view>
 					<view class="area huowu_num" bindtap="areaClick">
@@ -308,9 +308,9 @@
 						<image wx:else src="/images/check.png"></image>
 						<view>存储到面积租赁房</view>
 					</view>
-					<view class="xiehuo_fs">
+					<!-- <view class="xiehuo_fs">
 						入库人:{{username}}
-					</view>
+					</view> -->
 					<view class="btn">
 						<button size="default" bindtap="showModal">提交</button>
 					</view>
@@ -321,18 +321,18 @@
 	<!--屏幕背景变暗的背景  -->
 	<view class="commodity_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
 	<!--弹出框-提交 -->
-	<cover-view animation="{{animationData}}" class="commodity_attr_box" wx:if="{{showModalStatus}}">
-		<cover-view class="share_wp">
-			<cover-view class="youxiao">
-				<cover-image src="/images/hint.png">
-				</cover-image>
-				<cover-view class="describe">入库存储信息提交之后，只能作废， 不可修改,确定要提交么？</cover-view>
-				<cover-view class="btns_share">
-					<cover-view class="offer" bindtap="hideModal">取消
-					</cover-view>
-					<cover-view class="off" bindtap="btnClick" data-dataId="{{orderId}}">确定提交</cover-view>
-				</cover-view>
-			</cover-view>
-		</cover-view>
-	</cover-view>
+	<view animation="{{animationData}}" class="commodity_attr_box" wx:if="{{showModalStatus}}">
+		<view class="share_wp">
+			<view class="youxiao">
+				<image src="/images/hint.png">
+				</image>
+				<view class="describe">入库存储信息提交之后，只能作废， 不可修改,确定要提交么？</view>
+				<view class="btns_share">
+					<view class="offer" bindtap="hideModal">取消
+					</view>
+					<view class="off" bindtap="btnClick" data-dataId="{{orderId}}">确定提交</view>
+				</view>
+			</view>
+		</view>
+	</view>
 </view>
