--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,5 +1,9 @@
 /* pages/mine/mine.wxss */
-
+page{
+  font-size: 30rpx;
+  font-weight: '微软雅黑';
+  font-weight: 300;
+}
 .mine_wp {
   width: 100%;
   height: 100vh;
@@ -126,6 +130,7 @@
 .nb view {
   display: flex;
   align-items: center;
+  font-size: 30rpx;
 }
 
 .left_img {
