--- a/pages/pickConfirmOrder/pickConfirmOrder.wxml
+++ b/pages/pickConfirmOrder/pickConfirmOrder.wxml
@@ -54,7 +54,7 @@
 					公司营业执照
 					<view class="item_wp">
 						<view class="perch_t">
-							<image src="{{orderInfo.user.client.business_license}}"></image>
+							<image src="{{orderInfo.user.client.business_license}}" bindtap='previewMoreImage' data-src="{{orderInfo.user.client.business_license}}"></image>
 						</view>
 					</view>
 				</view>
@@ -62,10 +62,10 @@
 					法人身份证
 					<view class="item_wp">
 						<view class="perch_t">
-							<image src="{{orderInfo.user.client.idcard_img1}}">idcard_img1</image>
+							<image src="{{orderInfo.user.client.idcard_img1}}" bindtap='previewMoreImage' data-src="{{orderInfo.user.client.idcard_img1}}">idcard_img1</image>
 						</view>
 						<view class="perch_t">
-							<image src="{{orderInfo.user.client.idcard_img2}}">idcard_img2</image>
+							<image src="{{orderInfo.user.client.idcard_img2}}" bindtap='previewMoreImage' data-src="{{orderInfo.user.client.idcard_img2}}">idcard_img2</image>
 						</view>
 					</view>
 				</view>
@@ -93,10 +93,10 @@
 					驾驶证
 					<view class="item_wp">
 						<view class="perch_t">
-							<image src="{{orderInfo.driver.driving_licence1}}" mode='widthFix'></image>
+							<image src="{{orderInfo.driver.driving_licence1}}"  bindtap='previewMoreImage' data-src="{{orderInfo.driver.driving_licence1}}" mode='widthFix'></image>
 						</view>
 						<view class="perch_t">
-							<image src="{{orderInfo.driver.driving_licence2}}" mode='widthFix'></image>
+							<image src="{{orderInfo.driver.driving_licence2}}" bindtap='previewMoreImage' data-src="{{orderInfo.driver.driving_licence2}}" mode='widthFix'></image>
 						</view>
 					</view>
 				</view>
@@ -104,10 +104,10 @@
 					行驶证
 					<view class="item_wp">
 						<view class="perch_t">
-							<image src="{{orderInfo.driver.driving_permit1}}" mode='widthFix'></image>
+							<image src="{{orderInfo.driver.driving_permit1}}"  bindtap='previewMoreImage' data-src= "{{orderInfo.driver.driving_permit1}}" mode='widthFix'></image>
 						</view>
 						<view class="perch_t">
-							<image src="{{orderInfo.driver.driving_permit2}}" mode='widthFix'></image>
+							<image src="{{orderInfo.driver.driving_permit2}}" bindtap='previewMoreImage' data-src= "{{orderInfo.driver.driving_permit2}}" mode='widthFix'></image>
 						</view>
 					</view>
 				</view>
