--- a/pages/pickConfirmOrder/pickConfirmOrder.wxml
+++ b/pages/pickConfirmOrder/pickConfirmOrder.wxml
@@ -153,7 +153,7 @@
 					<!-- 是否有外包装入库 -->
 					<view class="huowu_num_st huowu_a">
 						<view class="bcn_s">
-							<text>*</text>是否有外包装入库
+							<text>*</text>是否有外包装出库
 							<view class="have" bindtap="packaging">
 								<view>有</view>
 								<image wx:if="{{ packaging }}" src="/images/check_a.png"></image>
